--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+== 0.6.2 - 24-Oct-2015
+* Change most bools to ints. This required explicitly defining some
+  attribute reader methods as well.
+* The gem is now signed.
+* Cleanup and updates for the Rakefile and gemspec.
+
 == 0.6.1 - 9-Apr-2013
 * Fixed the HANDLE datatypes in the underlying FFI code. This addresses
   an issue for 64 bit versions of Ruby.
